--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,23 @@
 html {
-  font-size: 13px; /* px means "pixels": the base font size is now 15 pixels high  */
-  font-family: 'arial', sans-serif; /* this should be the rest of the output you got from Google fonts */
+  font-size: 13px; /*the base font size is now 13 pixels high */
+  font-family: 'arial', sans-serif;
   background-color:white;
 }
+
 a {
   color: inherit;
   text-decoration:none;
 }
+
 a:hover, a:active {
   text-decoration: underline !important;
 }
+
 p {
   display: block;  
   margin-top: 15px;  
 } 
-/*
-input[type=text]:focus {
-  border: 0px solid #FFFFFF;
-}
-*/
+
 input[type=text] {
   background-color: white;
   background-image: url("https://img.icons8.com/ios/24/000000/search--v1.png");
@@ -29,17 +28,16 @@ input[type=text] {
   outline: none;
 }
 
-
 header { 
-  height: 50px;
-  line-height: 50px;
+   height: 50px;
+   line-height: 50px;
 }
 
 footer {
    position:absolute;
-   bottom:0;   			/* Height of the footer mettre au bas completement*/
+   bottom:0;   			/*mettre au bas completement*/
    width:100%;			/*Toute la largeur du browser*/
-   height:100px;   /* Height of the footer */
+   height:100px;
    background:#F0F0F0;   /*couleur grise qui remplie*/
    font-size: 10pt;
    height: 25px;
@@ -64,72 +62,72 @@ footer {
 }
 
 #LogoGoogle{
-  display: block;  
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-  width: 300px; /* width:300px; ou  width:25%; pour resizing*/*/
+   display: block;  
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 100px;
+   width: 300px; /* width:300px; ou  width:25%; pour resizing*/*/
 }
 
 button {
-  color: #444;
-  height: 36px;
-  line-height: 27px;
-  min-width: 54px;
-  text-align: center;
-  padding: 0 16px 0 16px;
-  border: 1px solid #f0f0f0;
-  border-radius:5px;
+   color: #444;
+   height: 36px;
+   line-height: 27px;
+   min-width: 54px;
+   text-align: center;
+   padding: 0 16px 0 16px;
+   border: 1px solid #f0f0f0;
+   border-radius:5px;
 }
 button:hover {	
-	border: 1px solid #bbb;
+   border: 1px solid #bbb;
 }
 
 #bouttonsUnderSearch {    
-  margin-top: 20px;
+   margin-top: 20px;
 }
 
 #SignIn {
-  background-color: rgb(66, 133, 244);
-  color: white;  
-  padding: 0 12px 0 12px;
-  margin-right: 0px; 
-  border-radius: 10%;
+   background-color: rgb(66, 133, 244);
+   color: white;  
+   padding: 0 12px 0 12px;
+   margin-right: 0px; 
+   border-radius: 10%;
 }
 
 #SignIn:hover {
-  border: 1px solid #fff;	
+   border: 1px solid #fff;	
 }
 
 .SearchBar {
-  display: block;
-  border-radius: 30px;
-  border: 1px solid #ccc;
-  width: 400px; /*width: 400px; ou  width:38%; pour resizing*/
-  height: 40px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
+   display: block;
+   border-radius: 30px;
+   border: 1px solid #ccc;
+   width: 400px; /*width: 400px; ou  width:38%; pour resizing*/
+   height: 40px;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 10px;
 }
 
 .UpperLinks  {
-	display: inline;
-	text-decoration: none;
-	padding-top: 100px;
+   display: inline;
+   text-decoration: none;
+   padding-top: 100px;
 }
 
 .BottomLinks  {
-	display: inline;
-	text-decoration: none;
-	padding-bottom: 10px;
+   display: inline;
+   text-decoration: none;
+   padding-bottom: 10px;
 }
 
 #lefties {
-	float: left;
-	display: inline-block;
+   float: left;
+   display: inline-block;
 }
 
 #righties {
-	float: right;
-	display: inline-block;
-	}
+   float: right;
+   display: inline-block;
+}
